--- a/nginx-lua-edge-service/data/etc/nginx/nginx.conf
+++ b/nginx-lua-edge-service/data/etc/nginx/nginx.conf
@@ -37,8 +37,8 @@ http {
 
     #set <upstream_name> as load balancer
     upstream lin1000_upstream {
-        #server www.lin1000.com:80;
-        server loadbalance.lin1000.com:81;
+        server www.lin1000.com:80;
+        #server loadbalance.lin1000.com:81;
     }
 
     upstream api_upstream {
@@ -54,15 +54,15 @@ http {
         error_log    /data/logs/nginx/error.log warn;
 
         # partial match case
-        # location / {
-        #     proxy_http_version 1.1  ;
-        #     proxy_pass http://lin1000_upstream; # assigned to predefined upstream and protocol
-        #     proxy_redirect     off;
-        #     proxy_set_header   Host $host;
-        #     proxy_set_header   X-Real-IP $remote_addr;
-        #     proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-        #     proxy_set_header   X-Forwarded-Host $server_name;            
-        # }       
+         location =/aws {
+             #proxy_http_version 1.1  ;
+             proxy_pass http://www.lin1000.com/; # assigned to predefined upstream and protocol
+             proxy_redirect http://www.lin1000.com/ http://www.lin1000.com/abc;
+             #proxy_set_header   Host $host;
+             #proxy_set_header   X-Real-IP $remote_addr;
+             #proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+             #proxy_set_header   X-Forwarded-Host $server_name;            
+        }       
 
         # exactly match case
         location =/ {
@@ -78,7 +78,7 @@ http {
             echo $host;
             echo $remote_addr;
             echo "Response Text";
-            proxy_pass http://localhost/urltest;
+            #proxy_pass http://localhost/urltest;
         }        
 
         location = /foo {         
@@ -224,7 +224,54 @@ http {
         }
     }         
 
+   
+    ## second server also listening on port 
+    server {
+        listen 80;
+        server_name 127.0.0.1;
+        # Test on echo-nginx-module
+        location /echo {
+            add_header Content-Disposition "inline";
+            add_header Content-Type "text/plain";
+            echo $host;
+            echo $remote_addr;
+            echo "it's not the default server, it's 127.0.0.1 server";
+        }    
+    }
+
+    #How to prevent processing requests with undefined server names
+    # server {
+    #     listen      80;
+    #     server_name "";
+    #     return      444;
+    # }    
+
+
+    # server {
+    #     # Ensure that HTTP/2 is enabled for the server
+    #     listen 80 ssl http2;
+    #     server_name localhost;
+
+    #     # ssl_certificate ssl/certificate.pem;
+    #     # ssl_certificate_key ssl/key.pem;
+
+    #     ssl_certificate /etc/ssl/certs/nginx-selfsigned.crt;
+    #     ssl_certificate_key /etc/ssl/private/nginx-selfsigned.key;
+    #     ssl_dhparam /etc/ssl/certs/dhparam.pem;
+
+    #     # whenever a client requests demo.html, also push
+    #     # /style.css, /image1.jpg and /image2.jpg
+    #     location = /demo.html {
+    #         add_header Content-Type "text/plain";
+    #         echo "demo page with ssl";
+    #         # http2_push /style.css;
+    #         # http2_push /image1.jpg;
+    #         # http2_push /image2.jpg;
+    #     }
+    # }    
+
     include /etc/nginx/conf.d/*.conf;
+    include /data/etc/nginx/conf.d/*.conf;
 
     #customized
     #autoindex on;
