--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,11 +4,123 @@ services:
     build: './nginx-lua-edge-service'
     ports:
      - "10080:80"
+     - "10443:443"
     volumes:
      - ./nginx-lua-edge-service/data:/data
     links:
       - redis
+
   redis:
     build: './redis-edge-service'
     ports:
      - "16379:6379"
+
+  etcd1:
+    image: gcr.io/etcd-development/etcd:latest
+    volumes:
+      - etcd1-data:/etcd-data
+    ports:
+     - "2379:2379"
+    expose:
+      - 2379
+      - 2380
+    networks:
+      etc_cluster_net:
+        ipv4_address: 172.16.238.100                  
+    environment:
+      - ETCDCTL_API=3
+    command:
+      - /usr/local/bin/etcd
+      - --data-dir=/etcd-data
+      - --name
+      - node1
+      - --initial-advertise-peer-urls
+      - http://172.16.238.100:2380
+      - --listen-peer-urls
+      - http://0.0.0.0:2380
+      - --advertise-client-urls
+      - http://172.16.238.100:2379
+      - --listen-client-urls
+      - http://0.0.0.0:2379
+      - --initial-cluster
+      - node1=http://172.16.238.100:2380,node2=http://172.16.238.101:2380,node3=http://172.16.238.102:2380
+      - --initial-cluster-state
+      - new
+      - --initial-cluster-token
+      - docker-etcd
+  
+  etcd2:
+    image: gcr.io/etcd-development/etcd:latest
+    volumes:
+      - etcd2-data:/etcd-data
+    networks:
+      etc_cluster_net:
+        ipv4_address: 172.16.238.101      
+    environment:
+      - ETCDCTL_API=3
+    expose:
+      - 2379
+      - 2380
+    command:
+      - /usr/local/bin/etcd
+      - --data-dir=/etcd-data
+      - --name
+      - node2
+      - --initial-advertise-peer-urls
+      - http://172.16.238.101:2380
+      - --listen-peer-urls
+      - http://0.0.0.0:2380
+      - --advertise-client-urls
+      - http://172.16.238.101:2379
+      - --listen-client-urls
+      - http://0.0.0.0:2379
+      - --initial-cluster
+      - node1=http://172.16.238.100:2380,node2=http://172.16.238.101:2380,node3=http://172.16.238.102:2380
+      - --initial-cluster-state
+      - new
+      - --initial-cluster-token
+      - docker-etcd   
+
+  etcd3:
+    image: gcr.io/etcd-development/etcd:latest
+    volumes:
+      - etcd3-data:/etcd-data
+    networks:
+      etc_cluster_net:
+        ipv4_address: 172.16.238.102
+    environment:
+      - ETCDCTL_API=3
+    expose:
+      - 2379
+      - 2380
+    command:
+      - /usr/local/bin/etcd
+      - --data-dir=/etcd-data
+      - --name
+      - node3
+      - --initial-advertise-peer-urls
+      - http://172.16.238.102:2380
+      - --listen-peer-urls
+      - http://0.0.0.0:2380
+      - --advertise-client-urls
+      - http://172.16.238.102:2379
+      - --listen-client-urls
+      - http://0.0.0.0:2379
+      - --initial-cluster
+      - node1=http://172.16.238.100:2380,node2=http://172.16.238.101:2380,node3=http://172.16.238.102:2380
+      - --initial-cluster-state
+      - new
+      - --initial-cluster-token
+      - docker-etcd      
+volumes:
+  etcd1-data:
+  etcd2-data:
+  etcd3-data:
+
+networks:
+  etc_cluster_net:
+    driver: bridge
+    ipam:
+      driver: default
+      config:
+      - subnet: 172.16.238.0/24      
