--- a/simple-nginx-edge-svc.yml
+++ b/simple-nginx-edge-svc.yml
@@ -1,9 +1,12 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: webserver
+  name: nginx-edge-service-public
 spec:
+  type: NodePort
   ports:
   - port: 80
+    targetPort: 8080  
+    nodePort: 30062         
   selector:
     app: nginx
