--- a/simple-nginx-edge-svc.yml
+++ b/simple-nginx-edge-svc.yml
@@ -4,9 +4,11 @@ metadata:
   name: nginx-edge-service-public
 spec:
   type: NodePort
+  selector:
+    app: nginx  
   ports:
-  - port: 80
+  - name: http
+    port: 80
     targetPort: 80  
     nodePort: 30062         
-  selector:
-    app: nginx
+    protocol: TCP
